@@ -1,6 +1,9 @@
  (Format: Year/Month/Day)
 Changes for 1.0rc3:
 *06/07/06:
+   * Changing between internal and external tabs didn't affect iconified
+     windows (Mark)
+     Screen.cc
    * Still trying to get the focus right: bug #1517750 (Mark)
      FocusControl.cc Window.cc Screen.cc
 *06/07/05:
